# ITBench-CISO-CAA-Agent

./: .flake8  .gitignore  .pre-commit-config.yaml  CISO Scenario and Agent.ipynb  Dockerfile  README.md  agent-harness.yaml  langtrace.md  license-header.txt  pyproject.toml  requirements-dev.txt
src/ciso_agent/: llm.py  main.py  manager.py  tools.py
src/ciso_agent/agents/: __init__.py  kubernetes_kubectl_opa.py  kubernetes_kyverno.py  kubernetes_kyverno_update.py  rhel_playbook_opa.py
src/ciso_agent/tools/: generate_kyverno.py  generate_opa_rego.py  generate_playbook.py  run_kubectl.py  run_opa_rego.py  run_playbook.py  utils.py
tests/: test_llm.py  test_models.py
