[tool.poetry]
name = "ciso_agent"
version = "0.1.0"
description = "CISO Agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# direct dependencies
crewai = ">=0.79.4,<0.80.0"
crewai-tools = ">=0.14.0,<0.25.0"
langgraph = ">=0.2.69,<0.3.0"
langchain = ">=0.3.15,<0.3.16"
langchain-ibm = ">=0.3.5,<0.3.6"
langchain-openai = ">=0.2.14,<0.3.0"
langtrace-python-sdk = ">=3.5.1,<3.6.0"
pydantic = "*"
python-dotenv = "*"

# indirect dependencies but specify versions here
# to reduce install time that can be very long if not specified
langchain-cohere = ">=0.3.4,<0.3.5"
huggingface_hub = ">=0.16.4,<0.17.0"
types-requests = ">=2.31.0.6,<2.31.0.10"
selenium = ">=4.18.1,<4.19.0"
instructor = ">=1.3.3,<1.4.0"
ibm-cos-sdk = ">=2.13.6,<2.14.0"
ibm-cos-sdk-core = ">=2.13.6,<2.14.0"
ibm-cos-sdk-s3transfer = ">=2.13.6,<2.14.0"
langsmith = ">=0.1.147,<0.2.0"
urllib3 = ">=2.2.2,<2.3.0"

[tool.poetry.scripts]
ciso_run = "ciso_agent.main:run"
run_crew = "ciso_agent.main:run"
train = "ciso_agent.main:train"
replay = "ciso_agent.main:replay"
test = "ciso_agent.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
force-exclude = '''
/(
\.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 150
