[tool.poetry]
name = "ciso_agent"
version = "0.1.0"
description = "CISO Agent using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# direct dependencies
python = ">=3.10,<3.13"
crewai = "0.95.0"
crewai-tools = "0.32.0"
litellm = "1.49.4"
langchain = "0.3.15"
langchain-ibm = "0.3.5"
langgraph = "0.2.65"
langtrace-python-sdk = "3.3.29"

# indirect dependencies but specify versions here
# to reduce install time that can be very long if not specified
langchain-cohere = "0.3.4"
huggingface-hub = "0.27.1"
langchain-core = "0.3.31"
selenium = "4.28.0"

[tool.poetry.scripts]
ciso_run = "ciso_agent.main:run"
run_crew = "ciso_agent.main:run"
train = "ciso_agent.main:train"
replay = "ciso_agent.main:replay"
test = "ciso_agent.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 150
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
force-exclude = '''
/(
\.venv
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 150
